--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "jupyter>=1.1.1",
     "lab>=8.8",
+    "notebook>=7.5.3",
+    "pandas>=3.0.0",
 ]
