--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "jupyter>=1.1.1",
     "lab>=8.8",
     "pandas>=3.0.0",
+    "plotly>=6.5.2",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
 ]
