--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "ipympl>=0.10.0",
+    "ipywidgets>=8.1.8",
     "jupyter>=1.1.1",
     "lab>=8.8",
     "pandas>=3.0.0",
