--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.128.0",
     "ipympl>=0.10.0",
     "ipywidgets>=8.1.8",
     "jupyter>=1.1.1",
@@ -13,4 +14,5 @@ dependencies = [
     "plotly>=6.5.2",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
+    "uvicorn>=0.40.0",
 ]
