End to end regression - notebook and fastapi (#1)
* first version with full flow

* add pandas and notebook

* clean up

* add dependencies

* notebook and data

* updated version

* add seaboarn

* uppdate with seaborn

* add plotly

* add better plots

* fix the 3d plot

* Updated with tables

* add overview

* Clean up uptp missing values

* Upto missing values

* clean up upto eda

* Fully clean version

* clear outputs

* save model

* add app and UI

* Fix UI

* readme for regression

* inspect importance

---------

Co-authored-by: =Vishnu <vishnuprasad@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.128.0",
+    "ipympl>=0.10.0",
+    "ipywidgets>=8.1.8",
     "jupyter>=1.1.1",
     "lab>=8.8",
+    "pandas>=3.0.0",
+    "plotly>=6.5.2",
+    "scikit-learn>=1.8.0",
+    "seaborn>=0.13.2",
+    "uvicorn>=0.40.0",
 ]
