--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "altair<5",
     "fastapi>=0.128.0",
     "ipympl>=0.10.0",
     "ipywidgets>=8.1.8",
@@ -14,5 +15,6 @@ dependencies = [
     "plotly>=6.5.2",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
+    "streamlit>=1.19.0",
     "uvicorn>=0.40.0",
 ]
